# rusty_tongue

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: action.rs  app.rs  database.rs  main.rs  savestate.rs  word_status.rs
src/app/: draw.rs  input.rs  text_utils.rs
src/app/draw/: below_panel.rs  bottom_panel.rs  central_panel.rs  side_panel.rs
src/app/draw/side_panel/: dictionary_pop_up.rs  language.rs  translate_pop_up.rs
src/database/: dict_item.rs  translation.rs  word_status.rs
